js/windowsTitleBar/style.css
#title-bar {
    display: flex;
    position: fixed;
    background: #4a4a4a;
    top: 0;
    left: 0;
    width: 100%;
    height: 32px;
    padding-left: 10px;
    justify-content: center;
    align-items: center;
    margin-left: -10px;
    -webkit-app-region: drag;
    -webkit-user-select: none;
    box-sizing: content-box;
    z-index: 1000;
}

#hamburger-menu-button {
    color: white;
    text-align: center;
    width: 40px;
    height: 32px;
    background: none;
    border: none;
    border-image: initial;
    display: inline-grid;
    border-radius: 0;
    padding: 11px;
    box-sizing: border-box;
    cursor: default;
}

#hamburger-menu-button:focus {
    outline: none;
}

#title-container {
    height: 32px;
    flex: 1;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
    overflow: hidden;
}

.title-bar-button-container {
    justify-content: center;
    align-items: center;
    right: 0;
    color: white;
    -webkit-app-region: no-drag;
    text-align: center;
    width: 45px;
    height: 32px;
    background: #4a4a4a;
    margin: 0;
    box-sizing: border-box !important;
    cursor: default;
}

.title-bar-button {
    color: white;
    text-align: center;
    width: 45px;
    height: 32px;
    background: none;
    border: none;
    border-image: initial;
    display: inline-grid;
    border-radius: 0;
    padding: 10px 15px;
    cursor: default;
}

.title-bar-button:hover {
    background-color: #333333;
}

.title-bar-button:focus {
    outline: none;
}

.title-bar-button-container:hover {
    background-color: #333333;
}

.window-border {
    border-left: 1px solid #4a4a4a;
    border-right: 1px solid #4a4a4a;
}

.bottom-window-border {
    position: fixed;
    border-bottom: 1px solid #4a4a4a;
    width: 100%;
    bottom: 0;
}

